hphp/hack/test/typecheck/as_expression/vec.php.exp
File "vec.php", line 6, characters 15-16:
Invalid argument (Typing[4110])
  File "vec.php", line 22, characters 26-31:
  This is a string
  File "vec.php", line 4, characters 3-4:
  It is incompatible with a value of generic type T#1 from this "as" assertion
File "vec.php", line 4, characters 9-11:
The type vec expects 1 type parameter(s) (Typing[4101])
File "vec.php", line 12, characters 15-16:
Invalid argument (Typing[4110])
  File "vec.php", line 22, characters 26-31:
  This is a string
  File "vec.php", line 10, characters 3-4:
  It is incompatible with a value of generic type T#1 from this "as" assertion
